--- a/package.json
+++ b/package.json
@@ -1,25 +1,43 @@
 {
-  "name": "waves",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
-    "next": "13.4.6",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
-  }
+	"name": "waves",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"format": "prettier . --write",
+		"prepare": "husky install"
+	},
+	"dependencies": {
+		"@types/node": "20.3.1",
+		"@types/react": "18.2.13",
+		"@types/react-dom": "18.2.6",
+		"autoprefixer": "10.4.14",
+		"eslint-config-next": "13.4.6",
+		"next": "13.4.6",
+		"postcss": "8.4.24",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"tailwindcss": "3.3.2",
+		"typescript": "5.1.3"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.60.0",
+		"@typescript-eslint/parser": "^5.60.0",
+		"eslint": "^8.43.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"husky": "^8.0.3",
+		"lint-staged": "^13.2.2",
+		"prettier": "2.8.8"
+	},
+	"lint-staged": {
+		"*.{js, ts}": "eslint --cache --fix",
+		"*.{js,css,md,html,json}": "npm run format"
+	}
 }
