--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@rainbow-me/rainbowkit": "^1.0.4",
 		"@types/node": "20.3.1",
 		"@types/react": "18.2.13",
 		"@types/react-dom": "18.2.6",
 		"autoprefixer": "10.4.14",
 		"classnames": "^2.3.2",
 		"eslint-config-next": "13.4.6",
+		"ethers": "^5.7.2",
 		"next": "13.4.6",
 		"postcss": "8.4.24",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.10.1",
 		"tailwindcss": "3.3.2",
-		"typescript": "5.1.3"
+		"typescript": "5.1.3",
+		"viem": "^1.2.2",
+		"wagmi": "^1.3.2"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.60.0",
