--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@apollo/client": "^3.7.16",
 		"@rainbow-me/rainbowkit": "^1.0.4",
 		"@types/node": "20.3.1",
 		"@types/react": "18.2.13",
 		"@types/react-dom": "18.2.6",
 		"autoprefixer": "10.4.14",
+		"axios": "^1.4.0",
 		"classnames": "^2.3.2",
 		"eslint-config-next": "13.4.6",
 		"ethers": "^5.7.2",
+		"graphql": "^16.7.1",
 		"next": "13.4.6",
 		"postcss": "8.4.24",
 		"react": "18.2.0",
