--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.10.1",
+		"recoil": "^0.7.7",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.1.3",
 		"viem": "^1.2.2",
