--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@bundlr-network/client": "^0.11.9",
 		"@types/node": "20.3.1",
 		"@types/react": "18.2.13",
 		"@types/react-dom": "18.2.6",
@@ -23,7 +24,9 @@
 		"react-dom": "18.2.0",
 		"react-icons": "^4.10.1",
 		"tailwindcss": "3.3.2",
-		"typescript": "5.1.3"
+		"typescript": "5.1.3",
+		"weavedb-sdk": "^0.27.24",
+		"weavedb-sdk-node": "^0.27.24"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.60.0",
