--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/react": "18.2.13",
 		"@types/react-dom": "18.2.6",
 		"autoprefixer": "10.4.14",
+		"axios": "^1.4.0",
 		"classnames": "^2.3.2",
 		"eslint-config-next": "13.4.6",
 		"next": "13.4.6",
@@ -25,8 +26,7 @@
 		"react-icons": "^4.10.1",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.1.3",
-		"weavedb-sdk": "^0.27.24",
-		"weavedb-sdk-node": "^0.27.24"
+		"weavedb-sdk": "^0.27.25"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.60.0",
