--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
-		"@bundlr-network/client": "^0.11.9",
 		"@apollo/client": "^3.7.16",
+		"@bundlr-network/client": "^0.11.9",
 		"@livepeer/react": "^2.5.8",
 		"@types/node": "20.3.1",
 		"@types/react": "18.2.13",
@@ -22,6 +22,7 @@
 		"classnames": "^2.3.2",
 		"eslint-config-next": "13.4.6",
 		"ethers": "^5.7.2",
+		"filereader-stream": "^2.0.0",
 		"graphql": "^16.7.1",
 		"next": "13.4.6",
 		"postcss": "8.4.24",
@@ -31,9 +32,9 @@
 		"recoil": "^0.7.7",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.1.3",
-		"weavedb-sdk": "^0.27.25",
 		"viem": "^1.2.2",
-		"wagmi": "^1.3.2"
+		"wagmi": "^1.3.2",
+		"weavedb-sdk": "^0.27.25"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.60.0",
