--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
-		"@bundlr-network/client": "^0.11.9",
 		"@apollo/client": "^3.7.16",
+		"@bundlr-network/client": "^0.11.9",
 		"@livepeer/react": "^2.5.8",
+		"@livepeer/webrtmp-sdk": "^0.2.3",
 		"@types/node": "20.3.1",
 		"@types/react": "18.2.13",
 		"@types/react-dom": "18.2.6",
@@ -31,9 +32,9 @@
 		"recoil": "^0.7.7",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.1.3",
-		"weavedb-sdk": "^0.27.25",
 		"viem": "^1.2.2",
-		"wagmi": "^1.3.2"
+		"wagmi": "^1.3.2",
+		"weavedb-sdk": "^0.27.25"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.60.0",
