--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.10.1",
+		"react-multi-carousel": "^2.8.4",
 		"recoil": "^0.7.7",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.1.3",
