feat: implement live chat stream

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
 		"browser": true,
 		"es2021": true
 	},
-	"extends": ["next/core-web-vitals", "plugin:react/recommended", "airbnb"],
+	"extends": ["next/core-web-vitals"],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaFeatures": {
