--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
 		"format": "prettier . --write",
 		"prepare": "husky install"
 	},
